--- a/DReporting.Web/Areas/Reporting/Views/Design/Index.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Design/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Design - " + Model.ReportName;
+    ViewBag.Title = "Design - " + Model.TemplateName;
 }
 
 @section styles {
