--- a/DReporting.Web/Areas/Reporting/Views/Preview/Index.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Preview/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Preview - " + Model.ReportName;
+    ViewBag.Title = "Preview - " + Model.TemplateName;
 }
 
 @section styles {
