--- a/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
@@ -11,7 +11,7 @@
         Area = ReportContext.AreaName,
         Controller = "Preview",
         Action = "Callback",
-        ReportID = Model.ReportID
+        TemplateID = Model.TemplateID
     };
 
     settings.ExportRouteValues = new
@@ -19,7 +19,7 @@
         Area = ReportContext.AreaName,
         Controller = "Preview",
         Action = "Export",
-        ReportID = Model.ReportID
+        TemplateID = Model.TemplateID
     };
 
     //settings.CacheReportDocument
