--- a/DReporting.Web/Areas/Reporting/Views/Home/Index.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="table-responsive">
-    <h3>Reports</h3>
+    <h3>Templates</h3>
     <table class="table table-striped">
         <thead>
             <tr>
@@ -43,7 +43,7 @@
         }
         <tfoot>
             <tr>
-                <td colspan="10"><a href="@Url.Action("Create", "Design", new { Area = ReportContext.AreaName, ReturnUrl = Url.Action("Index", "Home", new { Area = ReportContext.AreaName }) })" data-action="create-template">Create Report</a></td>
+                <td colspan="10"><a href="@Url.Action("Create", "Design", new { Area = ReportContext.AreaName, ReturnUrl = Url.Action("Index", "Home", new { Area = ReportContext.AreaName }) })" data-action="create-template">Create Template</a></td>
             </tr>
         </tfoot>
     </table>
