--- a/DReporting.Web/Areas/Reporting/Views/Home/EditTemplate.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Home/EditTemplate.cshtml
@@ -8,7 +8,7 @@
 <h3>Edit Template - @Model.TemplateName</h3>
 <hr />
 
-<form method="post" action="@Url.Action("SaveTemplate", "Home", new { Area = ReportContext.AreaName })">
+<form method="post" action="@Url.Action("SaveTemplate", "Home", new { Area = ReportingContext.AreaName })">
     @{var returnUrl = ViewContext.RequestContext.HttpContext.Request.QueryString["ReturnUrl"];}
     <input type="hidden" name="ReturnUrl" value="@returnUrl" />
     <input type="hidden" name="TemplateID" value="@Model.TemplateID" />
