--- a/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
@@ -8,7 +8,7 @@
 
     settings.CallbackRouteValues = new
     {
-        Area = ReportingContext.AreaName,
+        Area = ReportingGlobal.AreaName,
         Controller = "Preview",
         Action = "Callback",
         TemplateID = Model.TemplateID
@@ -16,7 +16,7 @@
 
     settings.ExportRouteValues = new
     {
-        Area = ReportingContext.AreaName,
+        Area = ReportingGlobal.AreaName,
         Controller = "Preview",
         Action = "Export",
         TemplateID = Model.TemplateID
