--- a/DReporting.Web/Areas/Reporting/Views/Shared/Category.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Category.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CategoryVM
 
-<form method="post" action="@Url.Action("SaveCategory", "Home", new { Area = ReportingContext.AreaName })">
+<form method="post" action="@Url.Action("SaveCategory", "Home", new { Area = ReportingGlobal.AreaName })">
     @{var returnUrl = ViewContext.RequestContext.HttpContext.Request.QueryString["ReturnUrl"];}
     <input type="hidden" name="ReturnUrl" value="@returnUrl" />
     <input type="hidden" name="CategoryID" value="@Model.CategoryID" />
