--- a/DReporting.Web/Areas/Reporting/Views/Design/Index.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Design/Index.cshtml
@@ -5,13 +5,13 @@
 
 @section styles {
     @Html.DevExpress().GetStyleSheets(
-        new StyleSheet { ExtensionSuite = ExtensionSuite.All }
+        new StyleSheet { ExtensionSuite = ExtensionSuite.Report }
     )
 }
 
 @section scripts {
     @Html.DevExpress().GetScripts(
-        new Script { ExtensionSuite = ExtensionSuite.All }
+        new Script { ExtensionSuite = ExtensionSuite.Report }
     )
 }
 
