--- a/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
@@ -11,7 +11,8 @@
         Area = ReportingGlobal.AreaName,
         Controller = "Preview",
         Action = "Callback",
-        TemplateID = Model.TemplateID
+        TemplateID = Model.TemplateID,
+        DataProviderId = Model.DataProviderId
     };
 
     settings.ExportRouteValues = new
