--- a/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
@@ -12,7 +12,7 @@
         Controller = "Preview",
         Action = "Callback",
         TemplateID = Model.TemplateID,
-        DataProviderId = Model.DataProviderId
+        DataProviderID = Model.DataProviderID
     };
 
     settings.ExportRouteValues = new
