--- a/DReporting.Web/Areas/Reporting/Content/dreporting.css
+++ b/DReporting.Web/Areas/Reporting/Content/dreporting.css
@@ -1,20 +1,12 @@
 ﻿body {
 }
 
-/* Set padding to keep content from hitting the edges */
 .body-content {
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
-
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.fullscreen {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 100%;
 }
