--- a/DReporting.Web/Areas/Reporting/Views/Preview/Index.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Preview/Index.cshtml
@@ -5,6 +5,7 @@
 
 @section styles {
     @Html.DevExpress().GetStyleSheets(
+        ASPxWebClientUIControl.ColorSchemeDark,
         new StyleSheet { ExtensionSuite = ExtensionSuite.Report }
     )
 }
