update grid demo

--- a/DReporting.Web/Views/Shared/Grid.cshtml
+++ b/DReporting.Web/Views/Shared/Grid.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DReporting.Web.Mvc.Controllers.Quote>
+﻿@model List<DReporting.Web.Controllers.Quote>
 
 @Html.DevExpress().GridView(settings => {
     settings.Name = "gvDataBinding";
