--- a/DReporting.Web/Areas/Reporting/Views/Shared/BaseLayout.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/BaseLayout.cshtml
@@ -6,7 +6,7 @@
 
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @Scripts.Render("~/reporting/js/bundle")
